<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtYouth"
        android:text="@string/youthInfo"
        android:textSize="50sp"
        android:paddingLeft="50sp"
        android:paddingBottom="60sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAdult"
        android:text="@string/adultInfo"
        android:textSize="50sp"
        android:paddingLeft="50sp"
        android:paddingBottom="60sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFamily"
        android:text="@string/familyInfo"
        android:textSize="50sp"
        android:paddingLeft="50sp"
        android:paddingBottom="60sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSenior"
        android:text="@string/seniorInfo"
        android:textSize="50sp"
        android:paddingLeft="50sp"
        android:paddingBottom="60sp"
        />
</LinearLayout>