<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <TableRow>
        <ImageView
            android:id="@+id/GTY"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/gtyplanetfitness"
            android:padding="15sp"
        />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/comfortableText"
            android:textSize="15sp"
            android:padding="15sp"
            />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/PFT"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/pftwittercard"
            android:padding="15sp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/judgmentFree"
            android:textSize="15sp"
            android:padding="15sp"
            />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/maxRes"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/maxresdefault"
            android:padding="15sp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/forTheConsumer"
            android:textSize="15sp"
            android:padding="15sp"
            />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/LaFi"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/lafiplanetfitness"
            android:padding="15sp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/kickButt"
            android:textSize="15sp"
            android:padding="15sp"
            />
    </TableRow>
</TableLayout>